--- a/screens/Movie/listMovie.html
+++ b/screens/Movie/listMovie.html
@@ -7,26 +7,26 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/tailwind-config.js"></script>
   </head>
-  <body class="bg-main-bg text-gray-300 font-sans">
-    <nav class="bg-secondary-bg p-4 border-b border-gray-900">
+  <body class="bg-primary-black text-gray-300 font-sans">
+    <nav class="bg-primary-black p-4 border-b border-secondary-black">
       <div class="container mx-auto flex justify-between items-center">
         <a
           href="../Home/index.html"
           class="text-3xl font-bold"
           style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3)"
         >
-          <span class="text-accent">Scream</span
+          <span class="text-primary-red">Scream</span
           ><span class="text-white">Flix</span>
         </a>
         <div class="flex items-center space-x-6">
           <a
             href="../Movie/registerMovie.html"
-            class="hover:text-accent transition-colors duration-300"
+            class="hover:text-primary-red transition-colors duration-300"
             >Cadastrar Filme</a
           >
           <a
             href="../Home/index.html"
-            class="hover:text-accent transition-colors duration-300"
+            class="hover:text-primary-red transition-colors duration-300"
             >Sair</a
           >
         </div>
@@ -43,12 +43,12 @@
 
         <div class="space-y-4">
           <div
-            class="bg-secondary-bg p-4 rounded-lg flex justify-between items-center border border-gray-800"
+            class="bg-primary-black p-4 rounded-lg flex justify-between items-center border border-secondary-black hover:bg-secondary-black transition-colors duration-300"
           >
             <h3 class="text-lg font-semibold text-white">O Iluminado</h3>
             <div class="flex items-center space-x-4">
               <button
-                class="text-gray-400 hover:text-accent transition-colors duration-300"
+                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
                 title="Editar Filme"
               >
                 <svg
@@ -67,7 +67,7 @@
                 </svg>
               </button>
               <button
-                class="text-gray-400 hover:text-red-500 transition-colors duration-300"
+                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
                 title="Eliminar Filme"
               >
                 <svg
@@ -89,12 +89,12 @@
           </div>
 
           <div
-            class="bg-secondary-bg p-4 rounded-lg flex justify-between items-center border border-gray-800"
+            class="bg-primary-black p-4 rounded-lg flex justify-between items-center border border-secondary-black hover:bg-secondary-black transition-colors duration-300"
           >
             <h3 class="text-lg font-semibold text-white">Hereditário</h3>
             <div class="flex items-center space-x-4">
               <button
-                class="text-gray-400 hover:text-accent transition-colors duration-300"
+                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
                 title="Editar Filme"
               >
                 <svg
@@ -113,7 +113,7 @@
                 </svg>
               </button>
               <button
-                class="text-gray-400 hover:text-red-500 transition-colors duration-300"
+                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
                 title="Eliminar Filme"
               >
                 <svg
@@ -135,12 +135,12 @@
           </div>
 
           <div
-            class="bg-secondary-bg p-4 rounded-lg flex justify-between items-center border border-gray-800"
+            class="bg-primary-black p-4 rounded-lg flex justify-between items-center border border-secondary-black hover:bg-secondary-black transition-colors duration-300"
           >
             <h3 class="text-lg font-semibold text-white">Pânico</h3>
             <div class="flex items-center space-x-4">
               <button
-                class="text-gray-400 hover:text-accent transition-colors duration-300"
+                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
                 title="Editar Filme"
               >
                 <svg
@@ -159,7 +159,7 @@
                 </svg>
               </button>
               <button
-                class="text-gray-400 hover:text-red-500 transition-colors duration-300"
+                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
                 title="Eliminar Filme"
               >
                 <svg
@@ -182,5 +182,6 @@
         </div>
       </div>
     </main>
+    <script src="/scripts.js" defer></script>
   </body>
 </html>
