--- a/screens/Movie/registerMovie.html
+++ b/screens/Movie/registerMovie.html
@@ -8,26 +8,26 @@
     <script src="/tailwind-config.js"></script>
     
   </head>
-  <body class="bg-main-bg text-gray-300 font-sans">
-    <nav class="bg-secondary-bg p-4 border-b border-gray-900">
+  <body class="bg-primary-black text-gray-300 font-sans">
+    <nav class="bg-primary-black p-4 border-b border-secondary-black">
       <div class="container mx-auto flex justify-between items-center">
         <a
           href="../Home/index.html"
           class="text-3xl font-bold"
           style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3)"
         >
-          <span class="text-accent">Scream</span
+          <span class="text-primary-red">Scream</span
           ><span class="text-white">Flix</span>
         </a>
         <div class="flex items-center space-x-6">
           <a
             href="./listMovie.html"
-            class="hover:text-accent transition-colors duration-300"
+            class="hover:text-primary-red transition-colors duration-300"
             >Listar Filmes</a
           >
           <a
             href="../Home/index.html"
-            class="hover:text-accent transition-colors duration-300"
+            class="hover:text-primary-red transition-colors duration-300"
             >Sair</a
           >
         </div>
@@ -47,7 +47,7 @@
 
         <form
           id="movie-register-form"
-          class="space-y-6 max-w-4xl mx-auto bg-secondary-bg p-8 rounded-lg shadow-xl border border-gray-800"
+          class="space-y-6 max-w-4xl mx-auto bg-primaryblack p-8 rounded-lg shadow-xl border-2 border-secondary-black"
         >
           <div>
             <label
@@ -58,7 +58,7 @@
             <input
               type="text"
               id="movie-title"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
               required
             />
           </div>
@@ -71,7 +71,7 @@
             <textarea
               id="movie-synopsis"
               rows="4"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
             ></textarea>
           </div>
           <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
@@ -84,20 +84,20 @@
               <input
                 type="number"
                 id="movie-year"
-                class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg block w-full p-2.5"
+                class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
                 placeholder="2024"
               />
             </div>
             <div>
               <label
                 for="movie-duration"
-                class="block mb-2 text-sm font-medium text-gray-300"
+                class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
                 >Duração (minutos)</label
               >
               <input
                 type="number"
                 id="movie-duration"
-                class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg block w-full p-2.5"
+                class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
                 placeholder="120"
               />
             </div>
@@ -110,7 +110,7 @@
               <input
                 type="text"
                 id="movie-rating"
-                class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg block w-full p-2.5"
+                class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
                 placeholder="16"
               />
             </div>
@@ -123,7 +123,7 @@
             >
             <select
               id="movie-category"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
             >
               <option>Melhores Filmes de Terror</option>
               <option>Lançamentos de Terror</option>
@@ -144,7 +144,7 @@
             <input
               type="url"
               id="movie-poster-url"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
               placeholder="https://image.tmdb.org/..."
             />
           </div>
@@ -157,29 +157,21 @@
             <input
               type="url"
               id="movie-bg-url"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
               placeholder="https://image.tmdb.org/..."
             />
           </div>
 
           <button
             type="submit"
-            class="w-full text-white bg-accent hover:bg-accent-dark font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-colors duration-300"
+            class="w-full text-white bg-primary-black hover:bg-primary-red font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-colors duration-300 border border-primary-red"
           >
             Cadastrar Filme
           </button>
         </form>
       </div>
     </main>
-
-    <script>
-      document
-        .getElementById("movie-register-form")
-        .addEventListener("submit", (event) => {
-          event.preventDefault();
-          alert("Filme cadastrado com sucesso! (Simulação)");
-          event.target.reset(); 
-        });
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/pouchdb@latest/dist/pouchdb.min.js"></script>
+    <script src="/scripts.js" defer></script>
   </body>
 </html>
