--- a/screens/Home/index.html
+++ b/screens/Home/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="bg-main-bg text-gray-300 font-sans">
     <nav
-      class="bg-secondary-black p-4 fixed top-0 left-0 right-0 z-20 backdrop-blur-sm border-b border-gray-900"
+      class="bg-primary-black p-4 fixed top-0 left-0 right-0 z-20 backdrop-blur-sm border-b border-secondary-black"
     >
       <div class="container mx-auto flex justify-between items-center">
         <a
@@ -32,14 +32,12 @@
 
     <div>
       <header
-        class="h-screen bg-cover bg-center flex items-end"
+        class="bg-primary-black h-screen bg-cover bg-center flex items-end"
         style="
           background-image: url('https://image.tmdb.org/t/p/original/h3X1AABD2k2sMhM9B2S7jt5iL3M.jpg');
         "
       >
-        <div
-          class="bg-gradient-to-t from-main-bg via-main-bg/50 to-transparent w-full"
-        >
+        <div class="from-main-bg via-main-bg/50 to-transparent w-full">
           <div class="container mx-auto px-4 pb-16">
             <h1 class="text-5xl font-bold text-white mb-4">
               Planeta dos Macacos: O Reinado
@@ -50,7 +48,7 @@
             </p>
             <a
               href="../Profile/register.html"
-              class="bg-transparent border-2 border-accent text-white font-bold py-3 px-8 rounded-md hover:bg-primary-red transition-colors duration-300"
+              class="bg-transparent border-2 border-primary-red text-white font-bold py-3 px-8 rounded-md hover:bg-primary-red transition-colors duration-300"
             >
               Assistir Agora
             </a>
@@ -59,8 +57,10 @@
       </header>
     </div>
 
-    <footer class="bg-secondary-black text-gray-400 text-center py-6">
-      <div class="container mx-auto">
+    <footer
+      class="bg-primary-black text-gray-400 text-center py-6 border-t border-secondary-black "
+    >
+      <div class="container mx-auto ">
         <p>&copy; 2025 ScreamFlix. Todos os direitos reservados.</p>
         <ul class="flex justify-center space-x-6 mt-4">
           <li>
@@ -81,5 +81,6 @@
         </ul>
       </div>
     </footer>
+    <script src="/scripts.js" defer></script>
   </body>
 </html>
