--- a/screens/Profile/register.html
+++ b/screens/Profile/register.html
@@ -7,24 +7,24 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/tailwind-config.js"></script>
   </head>
-  <body class="bg-main-bg text-gray-300 font-sans">
+  <body class="bg-primary-black text-gray-300 font-sans">
     <div class="min-h-screen flex flex-col items-center justify-center p-4">
       <a
         href="../Home/index.html"
         class="text-4xl font-bold mb-8"
         style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3)"
       >
-        <span class="text-accent">Scream</span
+        <span class="text-primary-red">Scream</span
         ><span class="text-white">Flix</span>
       </a>
 
       <div
-        class="bg-secondary-bg p-8 rounded-lg shadow-xl w-full max-w-md relative border border-gray-800"
+        class="bg-primary-black p-8 rounded-lg shadow-xl w-full max-w-md relative border border-secondary-black"
       >
-        <div class="flex border-b border-gray-700 mb-6">
+        <div class="flex border-b border-secondary-black mb-6">
           <button
             id="login-tab"
-            class="py-2 px-4 border-b-2 border-accent text-white w-1/2"
+            class="py-2 px-4 border-b-2 border-primary-red text-white w-1/2"
           >
             Entrar
           </button>
@@ -46,7 +46,7 @@
             <input
               type="email"
               id="login-email"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg focus:ring-accent focus:border-accent block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg focus:ring-primary-red focus:border-primary-red block w-full p-2.5"
               placeholder="nome@email.com"
               required
             />
@@ -60,14 +60,14 @@
             <input
               type="password"
               id="login-password"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg focus:ring-accent focus:border-accent block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg focus:ring-primary-red focus:border-primary-red block w-full p-2.5"
               placeholder="••••••••"
               required
             />
           </div>
           <button
             type="submit"
-            class="w-full text-white bg-accent hover:bg-accent-dark font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-colors duration-300"
+            class="w-full text-white bg-primary-black hover:bg-primary-red font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-colors duration-300 border-2 border-primary-red"
           >
             Entrar na sua conta
           </button>
@@ -84,7 +84,7 @@
               type="text"
               id="register-name"
               name="username"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg focus:ring-accent focus:border-accent block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg focus:ring-primary-red focus:border-primary-red block w-full p-2.5"
               placeholder="O seu nome"
             />
           </div>
@@ -97,7 +97,7 @@
             <input
               type="email"
               id="register-email"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg focus:ring-accent focus:border-accent block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg focus:ring-primary-red focus:border-primary-red block w-full p-2.5"
               placeholder="nome@email.com"
               required
             />
@@ -111,7 +111,7 @@
             <input
               type="password"
               id="register-password"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg focus:ring-accent focus:border-accent block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg focus:ring-primary-red focus:border-primary-red block w-full p-2.5"
               placeholder="••••••••"
               required
             />
@@ -125,68 +125,20 @@
             <input
               type="password"
               id="confirm-password"
-              class="bg-main-bg border border-gray-700 text-white text-sm rounded-lg focus:ring-accent focus:border-accent block w-full p-2.5"
+              class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg focus:ring-primary-red focus:border-primary-red block w-full p-2.5"
               placeholder="••••••••"
               required
             />
           </div>
           <button
             type="submit"
-            class="w-full text-white bg-accent hover:bg-accent-dark font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-colors duration-300"
+            class="w-full text-white bg-primary-black hover:bg-primary-red font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-colors duration-300 border-2 border-primary-red"
           >
             Criar conta
           </button>
         </form>
       </div>
     </div>
-
-    <script>
-      const loginTab = document.getElementById("login-tab");
-      const registerTab = document.getElementById("register-tab");
-      const loginForm = document.getElementById("login-form");
-      const registerForm = document.getElementById("register-form");
-
-      loginTab.addEventListener("click", () => {
-        loginTab.classList.replace("border-transparent", "border-accent");
-        loginTab.classList.replace("text-gray-400", "text-white");
-        registerTab.classList.replace("border-accent", "border-transparent");
-        registerTab.classList.replace("text-white", "text-gray-400");
-        loginForm.classList.remove("hidden");
-        registerForm.classList.add("hidden");
-      });
-
-      registerTab.addEventListener("click", () => {
-        registerTab.classList.replace("border-transparent", "border-accent");
-        registerTab.classList.replace("text-gray-400", "text-white");
-        loginTab.classList.replace("border-accent", "border-transparent");
-        loginTab.classList.replace("text-white", "text-gray-400");
-        registerForm.classList.remove("hidden");
-        loginForm.classList.add("hidden");
-      });
-
-      loginForm.addEventListener("submit", function (event) {
-        event.preventDefault();
-        const email = document.getElementById("login-email").value;
-        if (email.endsWith("@admin.com")) {
-          window.location.href = "./Movie/registerMovie.html";
-        } else {
-          window.location.href = "../Library/catalog.html";
-        }
-      });
-
-      registerForm.addEventListener("submit", function (event) {
-        event.preventDefault();
-        const email = document.getElementById("register-email").value;
-        const username = document.getElementById("register-name").value;
-
-        if (email.endsWith("@admin.com")) {
-          window.location.href = "registerMovie.html";
-        } else {
-          window.location.href = `../Library/catalog.html?username=${encodeURIComponent(
-            username
-          )}`;
-        }
-      });
-    </script>
+    <script src="/scripts.js" defer></script>
   </body>
 </html>
