--- a/screens/Movie/listMovie.html
+++ b/screens/Movie/listMovie.html
@@ -41,147 +41,13 @@
           </h1>
         </header>
 
-        <div class="space-y-4">
-          <div
-            class="bg-primary-black p-4 rounded-lg flex justify-between items-center border border-secondary-black hover:bg-secondary-black transition-colors duration-300"
-          >
-            <h3 class="text-lg font-semibold text-white">O Iluminado</h3>
-            <div class="flex items-center space-x-4">
-              <button
-                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
-                title="Editar Filme"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.536L16.732 3.732z"
-                  />
-                </svg>
-              </button>
-              <button
-                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
-                title="Eliminar Filme"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-                  />
-                </svg>
-              </button>
-            </div>
-          </div>
-
-          <div
-            class="bg-primary-black p-4 rounded-lg flex justify-between items-center border border-secondary-black hover:bg-secondary-black transition-colors duration-300"
-          >
-            <h3 class="text-lg font-semibold text-white">Hereditário</h3>
-            <div class="flex items-center space-x-4">
-              <button
-                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
-                title="Editar Filme"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.536L16.732 3.732z"
-                  />
-                </svg>
-              </button>
-              <button
-                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
-                title="Eliminar Filme"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-                  />
-                </svg>
-              </button>
-            </div>
-          </div>
-
-          <div
-            class="bg-primary-black p-4 rounded-lg flex justify-between items-center border border-secondary-black hover:bg-secondary-black transition-colors duration-300"
-          >
-            <h3 class="text-lg font-semibold text-white">Pânico</h3>
-            <div class="flex items-center space-x-4">
-              <button
-                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
-                title="Editar Filme"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.536L16.732 3.732z"
-                  />
-                </svg>
-              </button>
-              <button
-                class="text-gray-400 hover:text-primary-red transition-colors duration-300"
-                title="Eliminar Filme"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-                  />
-                </svg>
-              </button>
-            </div>
-          </div>
+        <div id="movie-list-container" class="space-y-4">
+          <!-- A lista de filmes será inserida aqui dinamicamente -->
         </div>
       </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/pouchdb@latest/dist/pouchdb.min.js"></script>
+    <script src="/router.js" defer></script>
     <script src="/scripts.js" defer></script>
   </body>
 </html>
