--- a/screens/Movie/registerMovie.html
+++ b/screens/Movie/registerMovie.html
@@ -6,7 +6,6 @@
     <title>Admin - Cadastro de Filmes - ScreamFlix</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/tailwind-config.js"></script>
-    
   </head>
   <body class="bg-primary-black text-gray-300 font-sans">
     <nav class="bg-primary-black p-4 border-b border-secondary-black">
@@ -37,18 +36,20 @@
     <main class="container mx-auto p-4 md:p-8">
       <div>
         <header class="mb-8 text-center">
-          <h1 class="text-3xl md:text-4xl font-bold text-white mb-2">
+          <h1 id="page-title" class="text-3xl md:text-4xl font-bold text-white mb-2">
             Cadastro de Filme
           </h1>
-          <p class="text-lg text-gray-400">
+          <p id="page-subtitle" class="text-lg text-gray-400">
             Cadastrar novo título no catálogo.
           </p>
         </header>
 
         <form
           id="movie-register-form"
-          class="space-y-6 max-w-4xl mx-auto bg-primaryblack p-8 rounded-lg shadow-xl border-2 border-secondary-black"
+          class="space-y-6 max-w-4xl mx-auto bg-primary-black p-8 rounded-lg shadow-xl border-2 border-secondary-black"
         >
+          <input type="hidden" id="movie-id">
+          <input type="hidden" id="movie-rev">
           <div>
             <label
               for="movie-title"
@@ -91,7 +92,7 @@
             <div>
               <label
                 for="movie-duration"
-                class="bg-primary-black border border-secondary-black text-white text-sm rounded-lg block w-full p-2.5"
+                class="block mb-2 text-sm font-medium text-gray-300"
                 >Duração (minutos)</label
               >
               <input
@@ -163,6 +164,7 @@
           </div>
 
           <button
+            id="submit-button"
             type="submit"
             class="w-full text-white bg-primary-black hover:bg-primary-red font-medium rounded-lg text-sm px-5 py-2.5 text-center transition-colors duration-300 border border-primary-red"
           >
@@ -171,7 +173,8 @@
         </form>
       </div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/pouchdb@latest/dist/pouchdb.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/pouchdb@latest/dist/pouchdb.min.js"></script>
+    <script src="/router.js" defer></script>
     <script src="/scripts.js" defer></script>
   </body>
 </html>
