Git Pages Fix 3

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ScreamFlix - Filmes e Séries</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/tailwind-config.js"></script>
+    <script src="tailwind-config.js"></script>
   </head>
   <body class="bg-primary-black text-gray-300 font-sans">
     <nav
@@ -13,7 +13,7 @@
     >
       <div class="container mx-auto flex justify-between items-center">
         <a
-          href="./index.html"
+          href="index.html"
           class="text-3xl font-bold"
           style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3)"
         >
@@ -22,7 +22,7 @@
         </a>
         <div class="flex items-center space-x-4">
           <a
-            href="../Profile/register.html"
+            href="register.html"
             class="hover:text-primary-red transition-colors duration-300"
             >Login</a
           >
@@ -46,7 +46,7 @@
               Um ano após o sumiço de sua irmã, Melanie, Clover e seus amigos vão para o vale remoto onde ela desapareceu em busca de respostas. Em um centro de visitantes abandonado, eles são caçados e assassinados um a um, revivendo a mesma noite de novo e de novo, e cada vez com uma nova ameaça assustadora. Com um número de mortes limitadas, eles precisam sobreviver a Noite de Terror para escaparem.
             </p>
             <a
-              href="../Profile/register.html"
+              href="register.html"
               class="bg-transparent border-2 border-primary-red text-white font-bold py-3 px-8 rounded-md hover:bg-primary-red transition-colors duration-300"
             >
               Assistir Agora
@@ -80,7 +80,6 @@
         </ul>
       </div>
     </footer>
-    <script src="/router.js" defer></script>
-    <script src="/scripts.js" defer></script>
+    <script src="scripts.js" defer></script>
   </body>
 </html>
