--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - ScreamFlix</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/tailwind-config.js"></script>
+    <script src="tailwind-config.js"></script>
   </head>
   <body class="bg-primary-black text-gray-300 font-sans">
     <div class="min-h-screen flex flex-col items-center justify-center p-4" 
@@ -13,7 +13,7 @@
         background-image: url('https://pbs.twimg.com/media/E76FeguUYAEq9zl.jpg:large');
         ">
       <a
-        href="../Home/index.html"
+        href="index.html"
         class="text-4xl font-bold mb-8"
         style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3)"
       >
@@ -148,7 +148,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/pouchdb@latest/dist/pouchdb.min.js"></script>
-    <script src="/router.js" defer></script>
-    <script src="/scripts.js" defer></script>
+    <script src="scripts.js" defer></script>
   </body>
 </html>
