--- a/details.html
+++ b/details.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Filme - ScreamFlix</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/tailwind-config.js"></script>
+    <script src="tailwind-config.js"></script>
 </head>
 <body class="bg-primary-black text-gray-300 font-sans">
     <nav class="bg-primary-black bg-opacity-75 p-4 fixed top-0 left-0 right-0 z-20 backdrop-blur-sm border-b border-secondary-black">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="./catalog.html" class="text-3xl font-bold" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.3);">
+            <a href="catalog.html" class="text-3xl font-bold" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.3);">
                 <span class="text-primary-red">Scream</span><span class="text-white">Flix</span>
             </a>
             <ul class="hidden md:flex space-x-8 items-center">
@@ -20,12 +20,12 @@
                 <li><a href="#" class="border-b-2 border-transparent hover:border-primary-red pb-1 transition-colors duration-300">Minha Lista</a></li>
             </ul>
             <div class="hidden md:flex items-center space-x-4">
-                <a href="../Home/index.html" class="hover:text-primary-red transition-colors duration-300">Sair</a>
+                <a href="index.html" class="hover:text-primary-red transition-colors duration-300">Sair</a>
             </div>
         </div>
     </nav>
     <div id="movie-details-container" class="min-h-screen">
-        <!-- O conteúdo dos detalhes do filme será inserido aqui pelo JavaScript -->
+        
     </div>
     <footer class="bg-primary-black text-gray-400 text-center py-6 border-t border-secondary-black">
         <div class="container mx-auto">
@@ -33,7 +33,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/pouchdb@latest/dist/pouchdb.min.js"></script>
-    <script src="/router.js" defer></script>
-    <script src="/scripts.js" defer></script>
+    <script src="scripts.js" defer></script>
 </body>
 </html>
