--- a/listMovie.html
+++ b/listMovie.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Filmes - ScreamFlix</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/tailwind-config.js"></script>
+    <script src="tailwind-config.js"></script>
   </head>
   <body class="bg-primary-black text-gray-300 font-sans">
     <nav class="bg-primary-black p-4 border-b border-secondary-black">
       <div class="container mx-auto flex justify-between items-center">
         <a
-          href="../Home/index.html"
+          href="index.html"
           class="text-3xl font-bold"
           style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3)"
         >
@@ -20,12 +20,12 @@
         </a>
         <div class="flex items-center space-x-6">
           <a
-            href="../Movie/registerMovie.html"
+            href="registerMovie.html"
             class="hover:text-primary-red transition-colors duration-300"
             >Cadastrar Filme</a
           >
           <a
-            href="../Home/index.html"
+            href="index.html"
             class="hover:text-primary-red transition-colors duration-300"
             >Sair</a
           >
@@ -42,12 +42,11 @@
         </header>
 
         <div id="movie-list-container" class="space-y-4">
-          <!-- A lista de filmes será inserida aqui dinamicamente -->
+         
         </div>
       </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/pouchdb@latest/dist/pouchdb.min.js"></script>
-    <script src="/router.js" defer></script>
-    <script src="/scripts.js" defer></script>
+    <script src="scripts.js" defer></script>
   </body>
 </html>
