--- a/catalog.html
+++ b/catalog.html
@@ -13,12 +13,6 @@
             <a href="catalog.html" class="text-3xl font-bold" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.3);">
                 <span class="text-primary-red">Scream</span><span class="text-white">Flix</span>
             </a>
-            <ul class="hidden md:flex space-x-8 items-center">
-                <li><a href="#" class="border-b-2 border-transparent hover:border-primary-red pb-1 transition-colors duration-300">Início</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-primary-red pb-1 transition-colors duration-300">Filmes</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-primary-red pb-1 transition-colors duration-300">Séries</a></li>
-                <li><a href="#" class="border-b-2 border-transparent hover:border-primary-red pb-1 transition-colors duration-300">Minha Lista</a></li>
-            </ul>
             <div class="hidden md:flex items-center space-x-4">
                 <a href="index.html" class="hover:text-primary-red transition-colors duration-300">Sair</a>
             </div>
@@ -29,18 +23,47 @@
             <h1 id="welcome-message" class="text-3xl md:text-4xl font-bold text-white mb-2">Bem-vindo(a)!</h1>
             <p class="text-lg text-gray-400">Explore o nosso catálogo de filmes e séries de terror.</p>
         </header>
+        
         <section class="mb-12">
             <h2 class="text-2xl font-bold text-white mb-4">Melhores Filmes de Terror</h2>
             <div id="best-movies-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
         </section>
+
         <section class="mb-12">
             <h2 class="text-2xl font-bold text-white mb-4">Lançamentos de Terror</h2>
             <div id="new-releases-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
         </section>
+
         <section class="mb-12">
             <h2 class="text-2xl font-bold text-white mb-4">Séries de Terror</h2>
             <div id="series-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
         </section>
+
+        <section class="mb-12">
+            <h2 class="text-2xl font-bold text-white mb-4">Slasher</h2>
+            <div id="slasher-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
+        </section>
+
+        <section class="mb-12">
+            <h2 class="text-2xl font-bold text-white mb-4">Terror Sobrenatural</h2>
+            <div id="supernatural-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
+        </section>
+
+        <section class="mb-12">
+            <h2 class="text-2xl font-bold text-white mb-4">Terror Psicológico</h2>
+            <div id="psychological-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
+        </section>
+
+        <section class="mb-12">
+            <h2 class="text-2xl font-bold text-white mb-4">Terror Folclórico</h2>
+            <div id="folk-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
+        </section>
+
+        <section class="mb-12">
+            <h2 class="text-2xl font-bold text-white mb-4">Found Footage</h2>
+            <div id="found-footage-container" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
+        </section>
+
     </main>
     <footer class="bg-primary-black text-gray-400 text-center py-6 border-t border-secondary-black">
         <div class="container mx-auto">
